# ChangeLog for app-backup/amanda
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/ChangeLog,v 1.51 2009/04/05 19:03:25 robbat2 Exp $

  05 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  amanda-2.6.0_p2-r4.ebuild:
  Update of the installed docs for 2.6.0_p2-r4, removes some spurious
  warnings of docs that no longer exist.

  01 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  amanda-2.6.0_p2-r4.ebuild:
  Fix minor issue from bug #264456 (comment 4), creating directories.

  01 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  amanda-2.5.2_p1-r5.ebuild:
  Just change the ebuild so automake runs earlier.

  26 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/amanda-2.6.0_p2-syslocpath.patch, amanda-2.6.0_p2-r4.ebuild:
  Bug #248838, avoid a too-generic binary named dump in /usr/bin.

*amanda-2.6.0_p2-r4 (19 Nov 2008)

  19 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
  +amanda-2.6.0_p2-r4.ebuild:
  Split out devpay support, as it is not for all users, thanks to Lisa
  Seelye <lisa@thedoh.com>.

  24 Sep 2008; Robin H. Johnson <robbat2@gentoo.org>
  amanda-2.6.0_p2-r2.ebuild, amanda-2.6.0_p2-r3.ebuild:
  Bug 238017, refix the migration of amandates. Sorry to the ~arch users.
  You will need to fix it up yourself from the snafu location if you did rm
  at the old location.

  23 Sep 2008; Robin H. Johnson <robbat2@gentoo.org>
  files/amanda-2.5.2p1-amcrypt-ossl-asym-race-fix.patch,
  files/amanda-2.6.0p2-amcrypt-ossl-asym-race-fix.patch:
  Quick fix of to better suppress the extra output from dd, that was causing
  a non-critical "STRANGE" warning during backups.

*amanda-2.6.0_p2-r3 (22 Sep 2008)
*amanda-2.5.2_p1-r5 (22 Sep 2008)

  22 Sep 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/amanda-2.5.2p1-amcrypt-ossl-asym-race-fix.patch,
  +files/amanda-2.6.0p2-amcrypt-ossl-asym-race-fix.patch,
  +amanda-2.5.2_p1-r5.ebuild, +amanda-2.6.0_p2-r3.ebuild: